# AlertaDengueCaptura

./: environment.yaml  pyproject.toml
crawlclima/: environment.yaml  pyproject.toml  setup.cfg
