[tool.poetry]
name = "captura-crawlclima"
version = "0.1.0"
description = "Modulo de captura automática de tweets e dados climáticos."
authors = ["Luã Bida Vacaro <luabidaa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9"
celery = "5.1.2"
click = "7.1.1"
geojson = "2.5.0"
pandas = "^1.4.4"
python-dotenv = "0.21.0"
psycopg2-binary = "2.9.3"
psycopg2 = "2.9.3"
requests = "2.28.1"
python-metar = "1.4.0"
responses = "0.21.0"
docker-compose = "1.29.2"

[tool.poetry.dev-dependencies]
coverage = "^6.4.4"
flake8 = "^5.0.4"
pip = "^21.3"
pytest = "^7.1.3"
pre-commit = "^2.20.0"
pytest-cov = "^3.0.0"


[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ["py37", "py37", "py38"]
exclude = "docs/"
